# CashRegister

./: CMakeLists.txt  README.md  restaurant.cpp
files/: items.txt  users.txt
include/components/headers/: IDisplayStrategy.hpp  Item.h  ItemCreator.hpp  Menu.hpp  MultiItemDisplay.hpp  OrderDisplay.hpp  SingleItem.h  SingleItemDisplay.hpp  Utilities.hpp  moneyclass.h  order.h  plate.h
include/components/src/: HelperFunctions.cpp  ItemCreator.cpp  Menu.cpp  MultiItemDisplay.cpp  OrderDisplay.cpp  SingleItemDisplay.cpp  Singleitem.cpp  Utilities.cpp  item.cpp  moneyclass.cpp  order.cpp  plate.cpp
include/drivers/headers/: Application.hpp
include/drivers/src/: Application.cpp
include/windows/headers/: Checkout.hpp  EditOrderWindow.hpp  ExtraOrderWindow.hpp  LoginWindow.hpp  ManagerWindow.hpp  OrderWindow.hpp
include/windows/src/: Checkout.cpp  EditOrderWindow.cpp  ExtraOrderWindow.cpp  LoginWindow.cpp  ManagerWindow.cpp  OrderWindow.cpp
tests/: extratests.cpp  testDisplay.cpp  unit_tests.cpp
tests/headers/: CreatorClass.hpp  HelperTests.hpp  itemfunctiontests.hpp  itemtests.hpp  moneyclasstests.h
